2004-09-25  Roland Illig  <roland.illig@gmx.de>

	* syntax.c (this_try_alloc_color_pair): Added const qualifiers.

2004-09-25  Pavel S. Shirshov <pavelsh@mail.ru>

	* edit.c (edit_clean): g_free handles NULL argument too, 
	no need for the comparison.
	    (edit_move_backward_lots): Likewise.
	* editcmd.c (edit_set_filename): Likewise.
	    (edit_replace_cmd): Likewise.
	    (edit_search_cmd): Likewise.
	    (edit_sort_cmd): Likewise.
	    (edit_mail_dialog): Likewise.
	* syntax.c (syntax_g_free): Likewise.
	    (edit_read_syntax_rules): Likewise.

2004-09-24  Roland Illig  <roland.illig@gmx.de>

	* editdraw.c (status_string): Removed unused parameter.
	(edit_status): Rewrote to allow longer filenames to be displayed
	completely whenever possible.
	* edit.c: Replaced NULL with (char *) NULL. Likewise for 0, where
	NULL was meant.
	* editcmd.c: Likewise.
	* editlock.c: Likewise.
	* editwidget.c: Likewise.
	* syntax.c: Likewise.

2004-09-19  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c (edit_replace_cmd): Added const qualifier.
	* editwidget.c (edit_my_define): likewise.
	* editcmd.c (edit_replace_prompt): Allocate the label text
	dynamically instead of using catstrs. Don't handle
	ENABLE_CHARSET specially.
	* edit.h: renamed edit() to edit_file() to avoid GCC shadow
	warnings (many variables are also called edit).
	* editwidget.c: likewise.

2004-09-17  Andrew V. Samoilov  <andrew@email.zp.ua>

	* editcmd.c (edit_replace_prompt) [HAVE_CHARSET]: Warning hack.

2004-09-03  Pavel S. Shirshov  <pavelsh@mail.ru>

	* editwidget.c (edit_adjust_size): Fix warnings.
	(edit_dialog_callback): Likewise.
	* edit.c (menu_save_mode_cmd): Likewise.

	Based on patch from Jakub Jelinek  <jakub@redhat.com>


2004-09-02  Pavel S. Shirshov <pavelsh@mail.ru>

	* editcmd.c (edit_save_as_cmd): Add hotkey to dialog.
	(edit_save_confirm_cmd): Likewise. (edit_new_cmd): Likewise.
	(edit_load_cmd): Likewise. (edit_block_move_cmd): Likewise.